--- a/index.html
+++ b/index.html
@@ -23,9 +23,8 @@
         <input type="email" id="emailInput" placeholder="Email do gestor">
       </label>
 
-      <button id="qrButton" title="Clique para abrir o QR code e compartilhar a aplicação">QR Code</button>
-      <button id="installButton" title="Clique para instalar a aplicação" hidden>Instalar App</button>
-
+      <button id="qrButton" title="Clique para abrir o QR code e compartilhar a aplicação" aria-label="Abrir QR Code">QR Code</button>
+      <button id="installButton" title="Clique para instalar a aplicação" hidden aria-label="Instalar aplicação">Instalar App</button>
     </div>
   </header>
 
