--- a/index.html
+++ b/index.html
@@ -6,40 +6,45 @@
   <title>Registo do Ponto</title>
   <link rel="manifest" href="manifest.json" />
   <meta name="theme-color" content="#1f2937" />
-  <link rel="stylesheet" href="styles.css" />
+  <link rel="icon" href="data:,">
+  <!-- Updated path to CSS inside src/css/ -->
+  <link rel="stylesheet" href="src/css/styles.css" />
+  <link rel="stylesheet" href="src/css/login.css" />
 </head>
 <body>
+  <!-- App Header -->
   <header class="app-header">
-    <img src="logo.png" alt="Registo do Ponto Logo" class="logo">
+    <img src="assets/logo.png" alt="Registo do Ponto Logo" class="logo">
 
     <div class="header-controls">
-      <label>
-        Mês:
-        <select id="monthSelect"></select>
-      </label>
-
-      <label>
-        Email:
-        <input type="email" id="emailInput" placeholder="Email do gestor">
-      </label>
-
-      <button id="qrButton" title="Clique para abrir o QR code e compartilhar a aplicação" aria-label="Abrir QR Code">QR Code</button>
-      <button id="installButton" title="Clique para instalar a aplicação" hidden aria-label="Instalar aplicação">Instalar App</button>
+      <button id="qrButton" title="Clique para abrir o QR code e compartilhar a aplicação" aria-label="Abrir QR Code">
+        QR Code
+      </button>
+      <button id="installButton" title="Clique para instalar a aplicação" hidden aria-label="Instalar App">
+        Instalar App
+      </button>
+      <button id="logoutBtn" title="Terminar sessão" hidden aria-label="Logout">
+        Logout
+      </button>
     </div>
   </header>
 
-  <main></main>
+  <!-- Dynamic main content -->
+  <main id="appMain">
+    <!-- JS will inject Auth / User / Manager views here -->
+  </main>
 
   <!-- QR Code Modal -->
   <div id="qrModal" class="modal hidden">
     <div class="modal-content">
       <h2>Instalar aplicação</h2>
-      <img src="qrcode.png" alt="QR Code para instalar a aplicação" class="qr-image" />
+      <img src="assets/qrcode.png" alt="QR Code para instalar a aplicação" class="qr-image" />
       <p>Digitalize este QR noutro dispositivo para abrir e instalar a aplicação.</p>
       <button id="closeQrButton">Fechar</button>
     </div>
   </div>
 
-  <script src="app.js"></script>
+  <!-- JS Modules -->
+  <script type="module" src="src/js/app.js"></script>
 </body>
 </html>
