--- a/src/html/login.html
+++ b/src/html/login.html
@@ -1,22 +1,25 @@
-<div class="login-container">
-  <!-- Optional notice for new users -->
-  <p class="info-message">
-    Se ainda não tem uma conta, contacte o seu gestor.
-  </p>
+<!-- src/views/login.html -->
+<section id="loginView" class="view">
+  <div class="login-container">
+    <!-- Optional notice for new users -->
+    <p class="info-message">
+      Se ainda não tem uma conta, contacte o seu gestor.
+    </p>
 
-  <form id="loginForm">
-    <div class="form-group">
-      <label for="userId">ID de utilizador</label>
-      <input type="text" id="userId" required />
-    </div>
+    <form id="loginForm">
+      <div class="form-group">
+        <label for="userId">ID de utilizador:</label>
+        <input type="text" id="userId" required />
+      </div>
 
-    <div class="form-group">
-      <label for="password">Palavra-passe</label>
-      <input type="password" id="password" required />
-    </div>
+      <div class="form-group">
+        <label for="password">Palavra-passe:</label>
+        <input type="password" id="password" required />
+      </div>
 
-    <button type="submit" class="btn">Iniciar sessão</button>
-  </form>
+      <button type="submit" class="btn">Entrar</button>
+    </form>
 
-  <div id="loginError" class="error-message hidden"></div>
-</div>
+    <div id="loginError" class="error-message hidden"></div>
+  </div>
+</section>
