Checkpoin doing footer buttons

--- a/index.html
+++ b/index.html
@@ -21,15 +21,9 @@
     <img src="assets/logo.png" alt="Registo do Ponto Logo" class="logo">
 
     <div class="header-controls">
-      <button id="qrButton" title="Clique para abrir o QR code e compartilhar a aplicação" aria-label="Abrir QR Code">
-        QR Code
-      </button>
-      <button id="installButton" title="Clique para instalar a aplicação" hidden aria-label="Instalar App">
-        Instalar App
-      </button>
-      <button id="logoutBtn" title="Terminar sessão" aria-label="Logout">
-        Logout
-      </button>
+      <button id="qrButton" title="Abrir QR Code">QR Code</button>
+      <button id="installButton" title="Instalar App" hidden>Instalar App</button>
+      <button id="logoutBtn" title="Logout">Logout</button>
     </div>
   </header>
 
