--- a/index.html
+++ b/index.html
@@ -47,5 +47,6 @@
 
   <!-- JS Modules -->
   <script type="module" src="src/js/app.js"></script>
+  <script src="assets/exceljs.min.js"></script>
 </body>
 </html>
